--- a/SortedKata.BusinessLogic/SortedKata.BusinessLogic.csproj
+++ b/SortedKata.BusinessLogic/SortedKata.BusinessLogic.csproj
@@ -5,4 +5,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dawn.Guard" Version="1.8.0" />
+  </ItemGroup>
+
 </Project>
