--- a/SortedKata.BusinessLogic/SortedKata.BusinessLogic.csproj
+++ b/SortedKata.BusinessLogic/SortedKata.BusinessLogic.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="Dawn.Guard" Version="1.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SortedKata.Models\SortedKata.Models.csproj" />
+    <ProjectReference Include="..\SortedKata.Repositories\SortedKata.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
